Update Wurld TrivYeah

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --white: #fff;
   --shadow: 3px 3px 10px #ddd;
   --space: 30px;
-  --accent-color-transparent: rgba(0,0,0,0.41);
+  --accent-color-transparent: rgba(0,0,0,0.81);
   --gradient-transparent: linear-gradient(180deg,var(--accent-color-transparent) 51%,var(--accent-color-transparent));
 }
 
@@ -34,10 +34,6 @@ a:hover a:active {
 
 .primary-text {
   color: var(--primary-color);
-}
-
-.firstcon {
-  padding: 0 12% 2% 12%;
 }
 
 .form-control {
@@ -79,45 +75,21 @@ a:hover a:active {
   margin-left: 5%;
 }
 
-@media (max-width: 1024px) {
-  .firstcon {
-    padding: 2% 10% 2% 10%;
+.rotating {
+  animation: rotating 10s linear infinite;
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
 .headerlogo {
   height: 200px;
-}
-
-.takequizbtn {
-  width: 310px;
-}
-
-@media (max-width: 1024px) {
-  .takequizbtn {
-    width: 200px;
-  }
-}
-
-h1 {
-  font-size: 24px;
-}
-
-@media (max-width: 1024px) {
-  h1 {
-    font-size: 16px;
-  }
-}
-
-p {
-  font-size: 15px;
-  padding-top: 1%;
-}
-
-@media (max-width: 1024px) {
-  p {
-    font-size: 14px;
-  }
 }
 
 li {
